added mvn, language base, and made all api tests the same